crates/compiler/src/tests/e2e/good/0041_inherent_method_on_inferred_builtin/main.gom
fn main() {
    let v = Vec::new();
    let v = v.push(10);
    let v = v.push(20);
    let v = v.push(30);
    let v = v.push(40);
    let s = v.slice(1, 3);
    println(int32_to_string(s.get(0)));
    println(int32_to_string(s.get(1)));
    println(int32_to_string(s.len()));
}
