crates/compiler/src/tests/e2e/bad/0041_inherent_method_on_inferred_builtin/main.gom
fn main() {
    let v = vec_new();
    let v = vec_push(v, 10);
    let v = vec_push(v, 20);
    let v = vec_push(v, 30);
    let v = vec_push(v, 40);
    let s = slice(v, 1, 3);
    println(int32_to_string(s.get(0)));
    println(int32_to_string(s.get(1)));
    println(int32_to_string(s.len()));
}
